--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  min-width: 100vw;
+  width: 100vw;
+  font-size: 62.5%;
 }
 
 a:link,
@@ -13,7 +14,7 @@ a:active {
 
 header {
   height: 85px;
-  margin: 0 7%;
+  padding: 0 7%;
   display: flex;
   justify-content: space-between;
   background-color: #f8fdb11d;
