--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -59,7 +59,7 @@
     }
     .search {
         max-width: 1000px;
-        margin: 0 auto;
+        margin: 0 auto 50px;
         position: relative;
         .search-image {
             text-align: center;
