--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -1,1 +1,22 @@
+@import '_variables';
 
+.input-ttl {
+    width: 100%;
+    display: flex;
+    justify-content:space-between;
+    margin: 15px 0;
+    p {
+        font-size: 1.5em;
+        margin: 0;
+    }
+}
+
+.btn {
+    span {
+        font-size: 1.5em;
+    }
+}
+
+.button {
+    font-size: 1.6em;
+}
