--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,7 +11,7 @@ $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #e3342f;
+$red: #be1c16;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
@@ -30,3 +30,11 @@ $shikoku: #e95711;
 $kyuusyuu: #d6e20e;
 $okinawa: #f29600;
 $footer: #52a180b3;
+
+$admin-btn-color: #535353;
+
+body {
+    margin: 0;
+    width: 100vw;
+    font-size: 62.5%;
+}
