--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,7 +18,7 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$title-color: #367777;
+$title-color: #3e4742;
 $font-color: #6b3719;
 $hokkaidou: #2aab39;
 $touhoku: #f8d939;
@@ -29,7 +29,8 @@ $tyuugoku: #97c932;
 $shikoku: #e95711;
 $kyuusyuu: #d6e20e;
 $okinawa: #f29600;
-$footer: #52a180b3;
+$header: #90a7901d;
+$footer: #252525b3;
 
 $admin-btn-color: #535353;
 
@@ -37,4 +38,5 @@ body {
     margin: 0;
     width: 100vw;
     font-size: 62.5%;
+    font-family: "M PLUS Rounded 1c";
 }
