--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -1,44 +1,65 @@
 @import '_variables';
 
-// index
-.container {
-    background-size: cover;
-    background-image: url(../img/index_img.jpg);
-    background-color:rgba(255,255,255,0.5);
-    background-blend-mode:lighten;
-    background-position: center center;
-    min-height: 750px;
-    animation: fadeIn 3s ease 0.2s 1 normal;
-    .site-ttl {
-        letter-spacing: 20px;
-        font-size: 4.3em;
-        font-family: 'Kaushan Script', cursive;
-        color: $title-color;
-        text-shadow: 1px 1px 0 #fcffae,
-                    -1px 1px 0 #fcffae,
-                    1px -1px 0 #fcffae,
-                    -1px -1px 0 #fcffae;
-        margin: 0;
-        padding: 200px 0 50px;
+.title-image {
+    // background-image: url(/images/index_img1.png);
+    // background-repeat: no-repeat;
+    // background-size: contain;
+    // background-position: center;
+    height: 500px;
+    .main-ttl {
+        text-align: center;
+        font-size: 3em;
     }
-    .site-details {
-        display: flex;
-        justify-content: flex-end;
-        width: 95%;
-        font-size: 1.8em;
-        line-height: 3;
-        color: $font-color;
-        margin: 100px auto 50px;
-        .site-text {
-            width: 50%;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-around;
+    .info-text {
+        margin: 80px auto 30px;
+        .text {
+            font-size: 1.5em;
+            text-align: center;
         }
     }
-    @media screen and (max-width: 1000px) {
-        p {
-            width: 90%;
+    .service-info {
+        width: 35%;
+        .info-image {
+            position: relative;
+            img {
+                width: 100%;
+                opacity: 0.75;
+            }
+            &:after {
+                position: absolute;
+                content: "";
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                box-shadow: inset 0 0 15px 15px #fff;
+            }
+        }
+    }
+    @media screen  and (max-width: 1123px){
+        flex-direction: column;
+        .service-info {
+            width: 80vw;
+            margin: 0 auto;
+            .info-text {
+                .text {
+                    font-size: 2em;
+                }
+            }
+        }
+    }
+    @media screen and (max-width: 768px) {
+        .text {
+            font-size: 1.5em;
         }
     }
 }
+
 
 @keyframes fadeIn { /*animation-nameで設定した値を書く*/
     0% {opacity: 0} /*アニメーション開始時は不透明度0%*/
@@ -46,39 +67,28 @@
 }
 
 .area-search {
-    width: 90vw;
-    margin: 0 auto;
-    .content-ttl {
-        display: inline-block;
-        margin-left: 10%;
-        padding: 5px 10px 0 5px;
-        border-bottom: 3px solid $blue;
-        border-left: 3px solid $blue;
-        line-height: 1;
-        font-size: 3em;
-    }
+    max-width: 65%;
     .search {
         max-width: 1000px;
-        margin: 0 auto 50px;
+        margin-bottom: 50px;
         position: relative;
         .search-image {
             text-align: center;
-            padding-left: 50px;
             img {
                 min-width: 700px;
             }
         }
         .area {
             position: absolute;
-            width: 190px;
-            top: 100px;
-            right: 15%;
+            width: 140px;
+            top: 50px;
+            right: 0;
             border-radius: 10px;
-            // color: #fff;
+            border: 2px solid #000;
+            background-color: #e4e4e4;
             .ttl {
                 width: 100%;
-                margin: 0;
-                margin-top: 10px;
+                margin: 10px 0;
                 font-size: 2em;
                 text-align: center;
             }
@@ -90,63 +100,45 @@
                 flex-wrap: wrap;
                 .list {
                     padding: 0;
-                    width: 33%;
+                    width: 50%;
                     text-align: center;
+                    line-height: 2;
                     a {
-                        font-size: 1.2em;
+                        font-size: 1.5em;
                     }
                 }
             }
             &:nth-child(2) {
-                background: $hokkaidou;
-                width: 80px;
                 .group .list {
                     width: 100%;
                 }
             }
             &:nth-child(3) {
-                background: $touhoku;
-                top: 200px;
+                top: 150px;
             }
             &:nth-child(4) {
-                background: $kantou;
-                top: 300px;
+                top: 310px;
             }
             &:nth-child(5) {
-                background: $tyuubu;
-                top: 150px;
-                left: 300px;
+                left: 240px;
             }
             &:nth-child(6) {
-                background: $kansai;
-                top: 480px;
-                right: 320px;
+                top: 220px;
+                right: 150px;
             }
             &:nth-child(7) {
-                background: $tyuugoku;
-                top: 300px;
-                left: 180px;
+                left: 90px;
             }
             &:nth-child(8) {
-                background: $shikoku;
-                width: 110px;
-                top: 500px;
-                right: 520px;
-                .group {
-                    .list {
-                        width: 50%;
-                    }
-                }
+                top: 270px;
+                left: 160px;
             }
             &:nth-child(9) {
-                background: $kyuusyuu;
-                top: 450px;
+                top: 210px;
                 left: 10px;
             }
             &:nth-child(10) {
-                background: $okinawa;
                 top: 500px;
-                width: 80px;
                 .group .list {
                     width: 100%;
                 }
@@ -154,6 +146,7 @@
         }
     }
     @media screen and (max-width: 1123px){
+        max-width: 100%;
         .search {
             .search-image {
                 img {
@@ -163,7 +156,7 @@
             .area {
                 position: static;
                 width: 80vw !important;
-                margin: 0 auto;
+                margin: 0 auto 20px;
                 .ttl {
                     padding: 10px 0;
                 }
@@ -183,6 +176,7 @@
     }
 
     @media screen and (max-width: 1000px) {
+        margin: 0 auto;
         .search {
             .search-image {
                 img {
